--- a/trunk/src/burnconfigdialog.ui
+++ b/trunk/src/burnconfigdialog.ui
@@ -37,10 +37,16 @@
          <property name="toolTip">
           <string>Locatioon of AVRDUDE executable</string>
          </property>
+         <property name="whatsThis">
+          <string>The location of the AVRDUDE.EXE executable.</string>
+         </property>
         </widget>
        </item>
        <item row="0" column="3" rowspan="2">
         <widget class="QPushButton" name="pushButton">
+         <property name="whatsThis">
+          <string>Use this button to browse and look for the AVRDUDE.EXE executable file.</string>
+         </property>
          <property name="text">
           <string>Browse...</string>
          </property>
@@ -61,10 +67,18 @@
          <property name="toolTip">
           <string>Stores temporary files</string>
          </property>
+         <property name="whatsThis">
+          <string>This directory holds temporary files needed for uploading and downloading EEPROM files.   
+
+Make sure you have write access to this directory.</string>
+         </property>
         </widget>
        </item>
        <item row="2" column="3">
         <widget class="QPushButton" name="pushButton_2">
+         <property name="whatsThis">
+          <string>Use this button to browse and select the temporary directory.</string>
+         </property>
          <property name="text">
           <string>Browse...</string>
          </property>
@@ -82,6 +96,10 @@
        </item>
        <item row="3" column="1">
         <widget class="QComboBox" name="avrdude_programmer">
+         <property name="whatsThis">
+          <string>Programmer used for communicating with the controller.
+Please consult the programmer's documentation and the AVRDUDE documentation to select the appropriate programmer.</string>
+         </property>
          <property name="insertPolicy">
           <enum>QComboBox::InsertAlphabetically</enum>
          </property>
@@ -399,6 +417,9 @@
        </item>
        <item row="3" column="3">
         <widget class="QPushButton" name="pushButton_3">
+         <property name="whatsThis">
+          <string>List all available programmers.</string>
+         </property>
          <property name="text">
           <string>List Available</string>
          </property>
@@ -408,6 +429,12 @@
         <widget class="QLineEdit" name="avrArgs">
          <property name="toolTip">
           <string>Extra arguments that will be passed to AVRDUDE on every call</string>
+         </property>
+         <property name="whatsThis">
+          <string>Extra arguments used in AVRDUDE.
+This can be used for providing extra information to AVRDUDE.
+
+Please only use this if you know what you are doing.  There are no error checks and you could cripple your controller.</string>
          </property>
         </widget>
        </item>
@@ -423,6 +450,9 @@
        </item>
        <item row="5" column="3">
         <widget class="QPushButton" name="pushButton_4">
+         <property name="whatsThis">
+          <string>Show AVRDUDE help</string>
+         </property>
          <property name="text">
           <string>Show Help</string>
          </property>
@@ -430,6 +460,10 @@
        </item>
        <item row="4" column="1">
         <widget class="QComboBox" name="avrdude_port">
+         <property name="whatsThis">
+          <string>Communication port to the programmer.
+</string>
+         </property>
          <item>
           <property name="text">
            <string/>
@@ -500,6 +534,21 @@
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="0" column="1">
       <widget class="QPushButton" name="resetFuses">
+       <property name="whatsThis">
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline;&quot;&gt;Reset Fuses&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Fuses in the AVR tell it how to behave.  Pressing this button sets the fuses to the default parameters needed in the er9x FW.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600; text-decoration: underline;&quot;&gt;WARNING&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Setting fuses can lead to problems and even a total lockout from your controller.  Do this only if you know what you are doing.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;When in doubt consult either the project's page or the forums @ RCG and RXModelreviews.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If you do get locked out - go to the project's homepage and lookup &amp;quot;dealing with Fuse Bricks&amp;quot;.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
        <property name="text">
         <string>Reset Fuses</string>
        </property>
@@ -517,6 +566,9 @@
      </item>
      <item row="0" column="0">
       <widget class="QPushButton" name="readFuses">
+       <property name="whatsThis">
+        <string>Reads the current fuses in the AVR AtMega 64 controller.</string>
+       </property>
        <property name="text">
         <string>Read Fuses</string>
        </property>
@@ -524,6 +576,16 @@
      </item>
      <item row="0" column="2">
       <widget class="QCheckBox" name="eraseEEPROM_CB">
+       <property name="whatsThis">
+        <string>If checked - sets the &quot;ERASE EEPROM&quot; fuse.
+That means that when flashing the FW the EEPROM is erased.   This is the preffered settings since it makes sure there are no unwanted data in the EEPROM.
+
+If you are upgrading an er9x version you might want to uncheck this fuse as it will prevent your model data from being erased.
+
+To write the fuse you need to press &quot;Reset Fuses&quot;.
+
+</string>
+       </property>
        <property name="text">
         <string>Set Erase EEPROM Fuse</string>
        </property>
